--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <i class="fa fa-times" id="menu-close"></i>
         <div class="container">
           <div class="image">
-            <a href="https://alphatanmoy-official.github.io/Tanmoy_Portfolio/"><img src="assets/images/Profile.png" alt="" /></a>
+            <a href="https://tanmoy-portfolio-sage.vercel.app/"><img src="assets/images/Profile.png" alt="" /></a>
           </div>
           <div class="author-content">
             <h4>Tanmoy Das</h4>
@@ -50,15 +50,15 @@
           <div class="social-network">
             <ul class="soial-icons">
               <li><a href="tel:8240570310"><i class="fa fa-phone"></i></a></li>
-              <li><a href="mailto:tanmoy.official.24@gmail.com"><i class="fa fa-envelope"></i></a></li>
-              <li><a href="https://github.com/AlphaTanmoy-Official"><i class="fa fa-github"></i></a></li>
+              <li><a href="mailto:tanmoy.projects.preview@gmail.com"><i class="fa fa-envelope"></i></a></li>
+              <li><a href="https://github.com/DevTanmoy"><i class="fa fa-github"></i></a></li>
               <li><a href="https://www.facebook.com/AlphaTanmoy/"><i class="fa fa-facebook"></i></a></li>
               <li><a href="https://www.linkedin.com/in/alpha-tanmoy/"><i class="fa fa-linkedin"></i></a></li>
               <li><a href="https://www.instagram.com/alphatanmoy/"><i class="fa fa-instagram"></i></a></li>
             </ul>
           </div>
           <div class="copyright-text">
-            <p>tanmoy.official.24@gmail.com</p>
+            <p>tanmoy.projects.preview@gmail.com</p>
           </div>
         </div>
       </div>
@@ -88,7 +88,7 @@
                   as well as using own initiative. I am able to work well under pressure and adhere to strict deadlines.
                 </p>
                 <div class="white-button">
-                  <a href="https://drive.google.com/file/d/1adqSrMR1ZZmMzUwoc1jUtObZe4_hb7bc/view?usp=sharing">Download Resume</a>
+                  <a href="https://drive.google.com/file/d/1aEf0PlhI9quCBPiBU22KVLLCzXGG7JGQ/view?usp=sharing">Download Resume</a>
                   <!--a href="https://leetcode.com/u/Alpha_Tanmoy/">LeetCode -></a-->
                 </div>
               </div>
@@ -210,7 +210,7 @@
                     <span style="padding: 3px;">ASL Stands for American Sign Language Recognition. Model Accuracy -
                       97.65%</span>
                     <h6 style="color: black;">Time Stamp: [12/2023-05/2024]</h6>
-                    <a href="https://github.com/AlphaTanmoy-Official/ASL-Recognizer" data-lightbox="image-1"
+                    <a href="https://github.com/DevTanmoy/ASL-Recognizer" data-lightbox="image-1"
                       data-title="Caption"><i class="fa fa-github"></i></a>
                   </figcaption>
                 </figure>
@@ -227,7 +227,7 @@
                     <h4>Twitter</h4>
                     <span style="padding: 3px;">This is basically a clone of actual Twitter.</span>
                     <h6 style="color: black;">Time Stamp: [07/2023-11/2024]</h6>
-                    <a href="https://github.com/AlphaTanmoy-Official/Twitter-Clone" data-lightbox="image-1"
+                    <a href="https://github.com/DevTanmoy/Twitter-Clone" data-lightbox="image-1"
                       data-title="Caption"><i class="fa fa-github"></i></a>
                   </figcaption>
                 </figure>
@@ -245,7 +245,7 @@
                     <h4>Airline Reservation System</h4>
                     <span style="padding: 3px;">This works as Online Airline reservation system.</span>
                     <h6 style="color: black;">Time Stamp: [10/2021-01/2023]</h6>
-                    <a href="https://github.com/AlphaTanmoy-Official/Airline-Reservation-System" data-lightbox="image-1"
+                    <a href="https://github.com/DevTanmoy/Airline-Reservation-System" data-lightbox="image-1"
                       data-title="Caption"><i class="fa fa-github"></i></a>
                   </figcaption>
                 </figure>
@@ -264,7 +264,7 @@
                     <span style="padding: 3px;">By Capturing Real-Time Images/Videos identify A humans Expression, Model
                       Accuracy 78.92%</span>
                     <h6 style="color: black;">Time Stamp: [10/2021-05/2022]</h6>
-                    <a href="https://github.com/AlphaTanmoy-Official/Facial-Expression-Detection"
+                    <a href="https://github.com/DevTanmoy/Facial-Expression-Detection"
                       data-lightbox="image-1" data-title="Caption"><i class="fa fa-github"></i></a>
                   </figcaption>
                 </figure>
